grails4 is always java 8 compatible