@@ -59,9 +59,6 @@ test {
     forkEvery = isTravisBuild ? 25 : 100
     if(!isTravisBuild) {
         maxHeapSize = '2048m'
-        if(!isJava8Compatible) {
-            jvmArgs '-XX:MaxPermSize=256m'
-        }
     }
     excludes = ['**/GrailsDomainBinderTests.class',
                 '**/ComponentValidationTests.class',
